--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "asyncpg>=0.30.0",
     "fastapi>=0.115.14",
     "livekit-agents[cartesia,deepgram,google,silero,turn-detector]~=1.0",
     "livekit-api>=1.0.3",
