--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,17 +2,20 @@ DEEPGRAM_API_KEY=
 CARTESIA_API_KEY=
 
 
-
-
+DATABASE_URL=
 
 
 LLM_API_KEY=
 
-GOOGLE_API_KEY=
 
+SUPABASE_JWT_SECRET=
 
 
 
 LIVEKIT_URL=
 LIVEKIT_API_KEY=
 LIVEKIT_API_SECRET=
+
+
+DATABASE_ISSUER=
+
