--- a/frontend/app.json
+++ b/frontend/app.json
@@ -74,7 +74,10 @@
       "typedRoutes": true
     },
     "extra": {
-      "router": {}
+      "router": {},
+      "eas": {
+        "projectId": "95a7d719-f387-4b38-a07f-30512add08c1"
+      }
     }
   }
 }
